--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Sharingan</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheets" type="text/css" href="src/styles.css" />
+    <script src="src/index.js"></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Neucha|Pacifico"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+  <body>
+    <p>Prototype</p>
+  </body>
 </html>
